--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,6 +1,9 @@
 @use "partials/mixins.scss" as *;
 @use "partials/variables.scss" as *;
 
+// Import all of Bootstrap's CSS
+@import "bootstrap/scss/bootstrap";
+
 
 h1{
     text-align: center;
